AR navigator 1.0 first version

--- a/app/src/main/res/layout/add_location.xml
+++ b/app/src/main/res/layout/add_location.xml
@@ -4,9 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".single_location.AddLocationFragment"
+    tools:context=".Admin.all_location.single_location.AddLocationFragment"
     android:orientation="vertical"
     android:layout_margin="16dp">
+
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/placeName"
+        app:layout_constraintVertical_bias="0.949" />
 
     <TextView
         android:id="@+id/textView"
