--- a/app/src/main/res/layout/all_locations_layout.xml
+++ b/app/src/main/res/layout/all_locations_layout.xml
@@ -7,16 +7,16 @@
     android:layout_margin="3dp"
     android:orientation="vertical"
     android:background="#FFFFFF"
-    tools:context=".all_location.AllLocationsFragment">
+    tools:context=".Admin.all_location.AllLocationsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="162dp"
+        android:layout_height="163dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="117dp"
+            android:layout_width="91dp"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:scaleType="centerInside"
@@ -24,20 +24,35 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="199dp"
+            android:layout_width="159dp"
             android:layout_height="162dp"
             android:layout_margin="5dp"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/hitmap55" />
 
-        <Button
-            android:id="@+id/buttonBack"
-            android:layout_width="64dp"
-            android:layout_height="59dp"
-            android:layout_margin="5dp"
-            android:drawableBottom="@drawable/baseline_keyboard_arrow_right_24"
-            android:hint="Back" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="163dp"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btnNavBack"
+                android:layout_width="123dp"
+                android:layout_height="41dp"
+                android:layout_margin="5dp"
+                android:hint="Nav Back" />
+
+
+            <Button
+                android:id="@+id/btnAdminBack"
+                android:layout_width="wrap_content"
+                android:layout_height="37dp"
+                android:layout_margin="5dp"
+                android:hint="Admin Back" />
+        </LinearLayout>
+
     </LinearLayout>
+
 
     <EditText
         android:id="@+id/searchEditText"
@@ -56,6 +71,5 @@
         android:layout_margin="5dp"
         android:layout_weight="0.2"
         android:background="#E2E6FF" />
-
 
 </LinearLayout>
