--- a/app/src/main/res/layout/start_nav_fragment.xml
+++ b/app/src/main/res/layout/start_nav_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="132dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/btnsAndInput"
         android:text="Choose from map"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/btnsAndInput"
         android:text="Choose from list"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/btnMap"
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="76dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/btnsAndInput"
         android:text="Back"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
