--- a/app/src/main/res/layout/navigation_fragment.xml
+++ b/app/src/main/res/layout/navigation_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/btnsAndInput"
         android:text="Start Navigation"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/btnNews"
@@ -26,7 +26,7 @@
         android:layout_width="120dp"
         android:layout_height="43dp"
         android:layout_marginBottom="104dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/btnsAndInput"
         android:text="Newsletter"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,7 +40,7 @@
         android:layout_width="120dp"
         android:layout_height="43dp"
         android:layout_marginBottom="40dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/btnsAndInput"
         android:text="Back"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
