continue work on UI

--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -25,9 +25,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Username"
+        app:errorTextColor="@color/red"
+        app:errorIconTint="@color/red"
+        app:boxStrokeErrorColor="@color/red"
+        app:startIconTint="@color/black"
+        app:cursorColor="@color/black"
+        app:startIconDrawable="@drawable/user"
         android:layout_marginTop="300dp"
         app:boxStrokeColor="@color/black"
         app:boxBackgroundColor="@color/btnsAndInput"
+        app:errorTextAppearance="@color/black"
         android:textColorHint="@color/black"
         app:hintTextColor="@color/black"
         android:imeOptions="actionDone"
@@ -49,6 +56,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
+        app:cursorColor="@color/black"
+        app:startIconTint="@color/black"
+        app:errorIconTint="@color/red"
+        app:errorTextColor="@color/red"
+        app:boxStrokeErrorColor="@color/red"
+        app:startIconDrawable="@drawable/password_lock"
+        app:endIconMode="password_toggle"
         android:imeOptions="actionDone"
         android:layout_marginTop="10dp"
         app:boxStrokeColor="@color/black"
