--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="btnsAndInput">#7EFFFFFF</color>
+    <color name="btnsAndInput">#8FFFFFFF</color>
+    <color name="red">#DAEA0000</color>
 </resources>
