--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -26,14 +26,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
-        android:layout_marginTop="50dp"
+
         app:boxStrokeColor="@color/black"
         app:boxBackgroundColor="@color/btnsAndInput"
         android:textColorHint="@color/black"
         app:hintTextColor="@color/black"
         android:imeOptions="actionDone"
+        app:errorIconTint="@color/red"
+        app:errorTextColor="@color/red"
+        app:boxStrokeErrorColor="@color/red"
         app:startIconDrawable="@drawable/email"
         app:startIconTint="@color/black"
+        app:cursorColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -45,6 +49,7 @@
         android:textColor="@color/black"
         android:inputType="textEmailAddress"/>
     </com.google.android.material.textfield.TextInputLayout>
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/reg_username_text_input"
@@ -59,12 +64,17 @@
         android:textColorHint="@color/black"
         app:hintTextColor="@color/black"
         android:imeOptions="actionDone"
+        app:errorIconTint="@color/red"
+        app:errorTextColor="@color/red"
+        app:boxStrokeErrorColor="@color/red"
+        app:cursorColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_input">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
+            android:maxLength="8"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:inputType="text"/>
@@ -76,11 +86,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
+        app:cursorColor="@color/black"
         android:imeOptions="actionDone"
         android:layout_marginTop="10dp"
         app:boxStrokeColor="@color/black"
         app:startIconDrawable="@drawable/password_lock"
+        app:endIconMode="password_toggle"
         app:startIconTint="@color/black"
+        app:errorIconTint="@color/red"
+        app:errorTextColor="@color/red"
+        app:boxStrokeErrorColor="@color/red"
         app:boxBackgroundColor="@color/btnsAndInput"
         android:textColorHint="@color/black"
         app:hintTextColor="@color/black"
@@ -96,7 +111,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/reg_confirm_password"
+        android:id="@+id/reg_confirm_password_text_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Confirm password"
@@ -104,9 +119,13 @@
         app:startIconTint="@color/black"
         android:layout_marginTop="10dp"
         app:boxStrokeColor="@color/black"
+        app:errorIconTint="@color/red"
+        app:errorTextColor="@color/red"
+        app:boxStrokeErrorColor="@color/red"
         app:boxBackgroundColor="@color/btnsAndInput"
         android:textColorHint="@color/black"
         app:hintTextColor="@color/black"
+        app:cursorColor="@color/black"
         android:imeOptions="actionDone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -126,9 +145,9 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/btnsAndInput"
         android:textColor="@color/black"
-        android:text="Login"
+        android:text="Register"
         android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/reg_confirm_password"
+        app:layout_constraintTop_toBottomOf="@+id/reg_confirm_password_text_input"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
