--- a/app/src/main/res/layout/navigation_fragment.xml
+++ b/app/src/main/res/layout/navigation_fragment.xml
@@ -41,7 +41,7 @@
         android:layout_height="43dp"
         android:layout_marginBottom="40dp"
         android:backgroundTint="@color/btnsAndInput"
-        android:text="Back"
+        android:text="Logout"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
