--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -7,18 +7,6 @@
     android:background="@drawable/background"
     tools:context=".UI.ui_activity.HomePageFragment">
 
-    <Button
-        android:id="@+id/buttonAdmin"
-        android:layout_width="175dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="500dp"
-        android:backgroundTint="@color/btnsAndInput"
-        android:text="Admin Manager"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/buttonLogin"
@@ -29,12 +17,10 @@
         android:backgroundTint="@color/btnsAndInput"
         android:text="Login User"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.433"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonAdmin"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonRegister"
@@ -42,12 +28,12 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/btnsAndInput"
         android:text="@string/register"
+        android:layout_marginTop="10dp"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.898"
-        tools:ignore="MissingConstraints" />
+     app:layout_constraintTop_toBottomOf="@id/buttonLogin"
+
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
