--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -54,13 +54,13 @@
             app:popUpTo="@id/allLocationsFragments"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_addLocationFragment_to_homePage"
-            app:destination="@id/homePage"
+            android:id="@+id/action_addLocationFragment_to_Nav"
+            app:destination="@id/Nav"
             app:enterAnim="@anim/from_left"
-            app:exitAnim="@anim/to_right"
+            app:exitAnim="@anim/from_right"
             app:popEnterAnim="@anim/from_right"
             app:popExitAnim="@anim/to_left"
-            app:popUpTo="@id/homePage"
+            app:popUpTo="@id/Nav"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
@@ -81,13 +81,6 @@
         android:name="com.example.locations.UI.ui_activity.HomePageFragment"
         android:label="HomePageFragment"
         tools:layout="@layout/home_page">
-        <action
-            android:id="@+id/action_homePage_to_addLocationFragment"
-            app:destination="@id/addItemFragment"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/to_left"
-            app:popExitAnim="@anim/to_left" />
         <action
             android:id="@+id/action_homePage_to_loginFragment"
             app:destination="@id/Login"
@@ -114,10 +107,11 @@
         <action
             android:id="@+id/action_loginFragment_to_homePage"
             app:destination="@id/homePage"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/to_left"
-            app:popExitAnim="@anim/to_left" />
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/to_right"
+            app:popExitAnim="@anim/to_right"
+             />
         <action
             android:id="@+id/action_LoginFragment_to_Nav"
             app:destination="@id/Nav"
@@ -134,10 +128,10 @@
         <action
             android:id="@+id/action_RegisterFragment_to_homePage"
             app:destination="@id/homePage"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/to_left"
-            app:popExitAnim="@anim/to_left" />
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/to_right"
+            app:popExitAnim="@anim/to_right" />
         <action
             android:id="@+id/action_RegisterFragment_to_Nav"
             app:destination="@id/Nav"
@@ -165,6 +159,9 @@
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/to_left"
             app:popExitAnim="@anim/to_left" />
+        <action
+            android:id="@+id/action_Nav_to_addItemFragment"
+            app:destination="@id/addItemFragment" />
     </fragment>
     <fragment
         android:id="@+id/News"
@@ -174,10 +171,12 @@
         <action
             android:id="@+id/action_News_to_Nav"
             app:destination="@id/Nav"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/to_left"
-            app:popExitAnim="@anim/to_left" />
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/to_right"
+            app:popExitAnim="@anim/to_right"
+            app:popUpTo="@id/Nav"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/StartNav"
@@ -187,10 +186,12 @@
         <action
             android:id="@+id/action_StartNav_to_Nav"
             app:destination="@id/Nav"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/to_left"
-            app:popExitAnim="@anim/to_left" />
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/to_right"
+            app:popExitAnim="@anim/to_right"
+            app:popUpTo="@id/Nav"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_StartNav_to_Map"
             app:destination="@id/Map"
