--- a/app/src/main/res/layout/add_location.xml
+++ b/app/src/main/res/layout/add_location.xml
@@ -12,128 +12,135 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/btnsAndInput"
         android:text="Back"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/placeName"
-        app:layout_constraintVertical_bias="0.949" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/coordText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Location 1.5"
+        android:layout_marginTop="20dp"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.079" />
-
-
-    <EditText
-        android:id="@+id/placeName"
-        android:layout_width="178dp"
-        android:layout_height="59dp"
-        android:hint=" Enter name of place"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnBack"
+        />
+<TextView
+    android:id="@+id/pick_img_text"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Pick an image"
+    android:textSize="20dp"
+    android:layout_marginTop="15dp"
+    app:layout_constraintTop_toBottomOf="@id/coordText"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"/>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="15dp"
+        app:cardCornerRadius="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.707" />
+        app:layout_constraintTop_toBottomOf="@id/pick_img_text"
+        >
 
-    <Button
-        android:id="@+id/image_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pick image"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/placeName"
-        app:layout_constraintVertical_bias="0.149"
-        tools:ignore="MissingConstraints" />
+        <ImageView
+           android:id="@+id/result_img"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/camera"
+            android:scaleType="centerCrop" />
 
-    <Button
-        android:id="@+id/btnViewList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View List"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.01"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/placeName"
-        app:layout_constraintVertical_bias="0.149" />
-
-    <Button
-        android:id="@+id/btnSavePlace"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Save data"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/placeName"
-        app:layout_constraintVertical_bias="0.149" />
-
-    <TextView
-        android:id="@+id/coordinatesView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Coordinates"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.568" />
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/nameView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="Name"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/card_view"
         app:layout_constraintVertical_bias="0.513" />
+    <TextView
+        android:id="@+id/coordinatesView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Coordinates"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nameView"
+        />
 
     <TextView
         android:id="@+id/azimuthView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Azimuth"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="20dp"
+       android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/coordinatesView"
         app:layout_constraintVertical_bias="0.618" />
 
-    <ImageView
-        android:id="@+id/result_img"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:src="@mipmap/ic_launcher"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <com.google.android.material.textfield.TextInputLayout
+       android:id="@+id/place_name_edit_text"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+       android:hint="Enter place name"
+        app:hintTextColor="@color/btnsAndInput"
+
+        app:boxStrokeColor="@color/btnsAndInput"
+        app:startIconDrawable="@drawable/ic_house"
+       app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+       app:layout_constraintTop_toBottomOf="@id/azimuthView">
+
+       <com.google.android.material.textfield.TextInputEditText
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content" />
+
+   </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/btnViewList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View List"
+        android:textColor="@color/black"
+        android:padding="10dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/btnsAndInput"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.248"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toStartOf="@id/btnSavePlace"
+        app:layout_constraintTop_toBottomOf="@+id/place_name_edit_text"
+        app:layout_constraintHorizontal_chainStyle="spread"/>
+
+    <Button
+        android:id="@+id/btnSavePlace"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save data"
+        android:backgroundTint="@color/btnsAndInput"
+        android:textColor="@color/black"
+        android:padding="10dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toEndOf="@+id/btnViewList"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/place_name_edit_text" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
