--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -4,104 +4,172 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_white"
+    android:background="@drawable/background"
     tools:context="com.example.locations.UI.LoginFragment">
 
-    <Button
+    <TextView
         android:id="@+id/button_homepage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
         android:layout_marginTop="5dp"
-        android:backgroundTint="@color/btnsAndInput"
-        android:text="home page"
-        android:textColor="@color/black"
+        android:padding="5dp"
+        android:drawableStart="@drawable/baseline_arrow_back_ios_24"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+    <androidx.cardview.widget.CardView
+        android:layout_width="120dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:cardCornerRadius="15dp">
 
-    <TextView
-        android:id="@+id/login_error"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/red"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:text="*Invalid email or password, please try again"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/email_text_input"
-        app:layout_constraintStart_toStartOf="parent" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/hitlogo"
+            android:scaleType="centerCrop" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/email_text_input"
-        android:layout_width="match_parent"
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Email"
-        app:errorTextColor="@color/red"
-        app:errorIconTint="@color/red"
-        app:boxStrokeErrorColor="@color/red"
-        app:startIconTint="@color/black"
-        app:cursorColor="@color/black"
-        app:startIconDrawable="@drawable/email"
-        android:layout_marginTop="300dp"
-        app:boxStrokeColor="@color/black"
-        app:boxBackgroundColor="@color/btnsAndInput"
-        app:errorTextAppearance="@color/black"
-        android:textColorHint="@color/black"
-        app:hintTextColor="@color/black"
-        android:imeOptions="actionDone"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="8dp"
+        app:cardBackgroundColor="@color/modal_window"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:inputType="textEmailAddress"/>
+            android:layout_height="470dp"
+            android:background="@color/modal_window"
+            android:padding="16dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sign in"
+                android:textSize="40dp"
+                android:textStyle="italic"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                android:id="@+id/login_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="*Invalid email or password, please try again"
+                android:textColor="@color/red"
+                android:visibility="gone"
+                app:layout_constraintBottom_toTopOf="@id/email_text_input"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/email_text_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-110dp"
+                android:hint="Email"
+                android:imeOptions="actionDone"
+                android:textColorHint="@color/black"
+                app:boxBackgroundColor="@color/btnsAndInput"
+                app:boxStrokeColor="@color/black"
+                app:boxStrokeErrorColor="@color/red"
+                app:cursorColor="@color/black"
+                app:errorIconTint="@color/red"
+                app:errorTextAppearance="@color/black"
+                app:errorTextColor="@color/red"
+                app:hintTextColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:startIconDrawable="@drawable/email"
+                app:startIconTint="@color/black">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password_text_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        app:cursorColor="@color/black"
-        app:startIconTint="@color/black"
-        app:errorIconTint="@color/red"
-        app:errorTextColor="@color/red"
-        app:boxStrokeErrorColor="@color/red"
-        app:startIconDrawable="@drawable/password_lock"
-        app:endIconMode="password_toggle"
-        android:imeOptions="actionDone"
-        android:layout_marginTop="10dp"
-        app:boxStrokeColor="@color/black"
-        app:boxBackgroundColor="@color/btnsAndInput"
-        android:textColorHint="@color/black"
-        app:hintTextColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_text_input">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/black" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:inputType="textPassword"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/password_text_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:hint="Password"
+                android:imeOptions="actionDone"
+                android:textColorHint="@color/black"
+                app:boxBackgroundColor="@color/btnsAndInput"
+                app:boxStrokeColor="@color/black"
+                app:boxStrokeErrorColor="@color/red"
+                app:cursorColor="@color/black"
+                app:endIconMode="password_toggle"
+                app:errorIconTint="@color/red"
+                app:errorTextColor="@color/red"
+                app:hintTextColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/email_text_input"
+                app:startIconDrawable="@drawable/password_lock"
+                app:startIconTint="@color/black">
 
-    <Button
-        android:id="@+id/confirm_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/btnsAndInput"
-        android:textColor="@color/black"
-        android:text="Login"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/password_text_input"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:textColor="@color/black" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/confirm_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:backgroundTint="@color/btnsAndInput"
+                android:text="Login"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/password_text_input" />
+
+            <TextView
+                android:id="@+id/register_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dont have an account?"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/register_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="Register"
+                android:textSize="20dp"
+                android:textColor="@color/blue_link"
+                android:textStyle="italic"
+                app:layout_constraintStart_toEndOf="@id/register_text"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
