--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="btnsAndInput">#8FFFFFFF</color>
     <color name="red">#DAEA0000</color>
     <color name="background_white">#D1D1D1</color>
+    <color name="blue_link">#319DF3</color>
+    <color name="modal_window">#A3202020</color>
+    <color name="gray">#494646</color>
 </resources>
