--- a/app/src/main/res/layout/all_locations_layout.xml
+++ b/app/src/main/res/layout/all_locations_layout.xml
@@ -1,56 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="3dp"
-    android:orientation="vertical"
-    android:background="#FFFFFF"
+    android:layout_width="match_parent"
+    android:layout_height="732dp"
+    android:background="@drawable/background"
     tools:context=".Admin.all_location.AllLocationsFragment">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="163dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        app:cardBackgroundColor="@color/background_white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="91dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/hitlogo" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="159dp"
-            android:layout_height="162dp"
-            android:layout_margin="5dp"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/hitmap55" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_height="match_parent"
+            android:layout_width="match_parent">
 
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/imageView"
+                android:layout_width="120dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:cardCornerRadius="15dp">
 
-    </LinearLayout>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/hitlogo"
+                    android:scaleType="centerCrop" />
+
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/btn_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="10dp"
+                android:drawableStart="@drawable/baseline_arrow_back_ios_24"
+                android:textSize="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/searchEditTextLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Search"
+                android:layout_marginTop="10dp"
+                app:boxStrokeColor="@color/gray"
+                app:hintTextColor="@color/gray"
+                app:cursorColor="@color/gray"
+                app:layout_constraintTop_toBottomOf="@id/imageView"
+                app:layout_constraintStart_toStartOf="parent">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/searchEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/searchEditTextLayout"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
 
-    <EditText
-        android:id="@+id/searchEditText"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:layout_margin="5dp"
-        android:ems="10"
-        android:hint="search"
-        android:inputType="text"
-        android:text="" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="393dp"
-        android:layout_height="399dp"
-        android:layout_margin="5dp"
-        android:layout_weight="0.2"
-        android:background="#E2E6FF" />
 
-</LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
