--- a/app/src/main/res/layout/location_item.xml
+++ b/app/src/main/res/layout/location_item.xml
@@ -7,61 +7,59 @@
     app:contentPadding="5dp"
     app:cardCornerRadius="8dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/locationItemLayout"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/buildingImage"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@mipmap/ic_launcher"
-            android:contentDescription="location image" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:gravity="center|center_vertical"
-            android:orientation="vertical"
-            android:background="#FCF6F6">
+        >
 
             <TextView
                 android:id="@+id/buildingName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_weight="1"
                 android:gravity="center"
+                android:layout_marginTop="10dp"
                 android:text="name"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/azimuthTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="3dp"
+                android:visibility="gone"
+                android:layout_marginTop="10dp"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="azimuth"
-                android:textSize="16sp" />
+                android:text="Azimuth : "
+                android:textSize="16sp"
+                app:layout_constraintTop_toBottomOf="@+id/buildingName"
+                app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
                 android:id="@+id/locationTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="3dp"
-                android:layout_marginRight="5dp"
-                android:layout_weight="1"
+                android:visibility="gone"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
-                android:text="location"
-                android:textSize="16sp" />
-        </LinearLayout>
-    </LinearLayout>
+                android:text="location : "
+                android:textSize="16sp"
+                app:layout_constraintTop_toBottomOf="@+id/azimuthTextView"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+        <ImageView
+            android:id="@+id/buildingImage"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:contentDescription="location image"
+            android:layout_marginLeft="190dp"
+            android:src="@mipmap/ic_launcher"
+            app:layout_constraintStart_toEndOf="@+id/locationTextView"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
