--- a/app/src/main/res/layout/navigation_fragment.xml
+++ b/app/src/main/res/layout/navigation_fragment.xml
@@ -7,60 +7,82 @@
     android:background="@drawable/background"
     tools:context="com.example.locations.UI.ui_activity.NavigationFragment">
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:backgroundTint="@color/background_white">
 
-    <Button
-        android:id="@+id/buttonAdmin"
-        android:layout_width="175dp"
-        android:layout_height="42dp"
-        android:backgroundTint="@color/btnsAndInput"
-        android:text="Admin Manager"
-        android:textColor="@color/black"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
-    <Button
-        android:id="@+id/btnStartNav"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-       android:layout_marginTop="20dp"
-        android:backgroundTint="@color/btnsAndInput"
-        android:text="Start Navigation"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/buttonAdmin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:backgroundTint="@color/white"
-        tools:ignore="MissingConstraints" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_height="match_parent"
+            android:layout_width="match_parent">
 
-    <Button
-        android:id="@+id/btnNews"
-        android:layout_width="120dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="@color/btnsAndInput"
-        android:text="Newsletter"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/btnStartNav"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:backgroundTint="@color/white"
-         />
+        <Button
+            android:id="@+id/buttonAdmin"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/gray"
+            android:text="Admin Manager"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <Button
-        android:id="@+id/btnLogout"
-        android:layout_width="120dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="@color/btnsAndInput"
-        android:text="Logout"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnNews"
-        tools:backgroundTint="@color/white"
-         />
+            <Button
+                android:id="@+id/btnStartNav"
+                android:layout_width="153dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="@color/gray"
+                android:text="Start Navigation"
+                app:layout_constraintTop_toBottomOf="@id/buttonAdmin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <Button
+                android:id="@+id/btnNews"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="@color/gray"
+                android:text="HIT Newsletter"
+                app:layout_constraintTop_toBottomOf="@id/btnStartNav"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <Button
+                android:id="@+id/btnLogout"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="@color/gray"
+                android:text="Logout"
+                app:layout_constraintTop_toBottomOf="@id/btnNews"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+
+
+
+<!--    <Button-->
+<!--        android:id="@+id/btnLogout"-->
+<!--        android:layout_width="120dp"-->
+<!--        android:layout_height="43dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:backgroundTint="@color/btnsAndInput"-->
+<!--        android:text="Logout"-->
+<!--        android:textColor="@color/black"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/btnNews"-->
+<!--        tools:backgroundTint="@color/white"-->
+<!--         />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
