--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,11 @@
 <resources>
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white_blue">#5B73FF</color>
     <color name="btnsAndInput">#8FFFFFFF</color>
     <color name="red">#DAEA0000</color>
-    <color name="background_white">#D1D1D1</color>
+    <color name="background_white">#A9D1D1D1</color>
     <color name="blue_link">#319DF3</color>
-    <color name="modal_window">#A3202020</color>
+    <color name="modal_window">#A3313131</color>
     <color name="gray">#494646</color>
 </resources>
