--- a/app/src/main/res/layout/detail_location_info.xml
+++ b/app/src/main/res/layout/detail_location_info.xml
@@ -4,66 +4,106 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/background"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Admin.all_location.detail_location.DetailLocationInfo">
 
+<androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:backgroundTint="@color/background_white">
 
-    <TextView
-        android:id="@+id/location_name"
-        android:layout_width="395dp"
-        android:layout_height="38dp"
-        android:text="Location name"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.01"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="8dp" />
-
-    <TextView
-        android:id="@+id/location_location"
-        android:layout_width="394dp"
-        android:layout_height="27dp"
-        android:text="Location"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/location_azimuth"
-        app:layout_constraintTop_toBottomOf="@+id/location_name"
-        tools:layout_editor_absoluteX="17dp"
-        tools:ignore="MissingConstraints" />
-
-
-    <TextView
-        android:id="@+id/location_azimuth"
-        android:layout_width="392dp"
-        android:layout_height="27dp"
-        android:text="Azimuth"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/item_detail_image"
-        app:layout_constraintTop_toTopOf="@+id/location_name"
-        app:layout_constraintVertical_bias="0.191"
-        tools:layout_editor_absoluteX="19dp"
-        tools:ignore="MissingConstraints" />
-
-    <ImageView
-        android:id="@+id/item_detail_image"
-        android:layout_width="394dp"
-        android:layout_height="436dp"
-        android:src="@mipmap/ic_launcher"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="17dp" />
-
-    <Button
-        android:id="@+id/btn_back"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Back to Main"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/location_name"
-        app:layout_constraintVertical_bias="0.989"
-        tools:layout_editor_absoluteX="38dp" />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:drawableStart="@drawable/baseline_arrow_forward_ios_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/location_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Location Name"
+            android:textColor="@color/gray"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/location_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Location"
+            android:textColor="@color/gray"
+            android:textSize="20sp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/location_name" />
+
+        <TextView
+            android:id="@+id/location_azimuth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Azimuth"
+            android:visibility="gone"
+            android:textColor="@color/gray"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/location_location" />
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text="Description"
+            android:textColor="@color/gray"
+            android:textSize="20sp"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/location_name" />
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/item_detail_image"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:contentDescription="location image"
+            android:src="@mipmap/ic_launcher"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/RoundedImageView" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
+
+
+
+<!--    <Button-->
+<!--        android:id="@+id/btn_back"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Back to Main"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/location_name"-->
+<!--        app:layout_constraintVertical_bias="0.989"-->
+<!--        tools:layout_editor_absoluteX="38dp" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
